--- a/index.html
+++ b/index.html
@@ -49,16 +49,21 @@
                       <p class="text-4xl my-4">0</p>
                       <div class="card-actions justify-end">
                         <button class="bg-[#22c55e] text-white py-2 px-6 rounded-md shadow-md">Increment</button>
-                        <button class="bg-[#ef4444] text-white py-2 px-6 rounded-md shadow-md">Decrement</button>
+                        <button class="bg-[#ef4444] text-white py-2 px-6 rounded-md shadow-md hover:shadow-lg">Decrement</button>
                       </div>
                     </div>
                   </div>
             </div>
+           <div class="my-10 flex justify-center items-center">
+            <button class="select-none rounded-lg bg-yellow-500 py-3 px-6 text-center align-middle font-sans text-xs font-bold uppercase text-white shadow-md shadow-blue-500/20 transition-all hover:shadow-lg hover:shadow-blue-500/40 focus:opacity-[0.85] focus:shadow-none active:opacity-[0.85] active:shadow-none disabled:pointer-events-none disabled:opacity-50 disabled:shadow-none">Reset All Tasbhi</button>
+           </div>
         </div>
 
 
         
     </section>
 
+
+<script src="script.js"></script>    
 </body>
 </html>
